--- a/src/routes/login/Login.css
+++ b/src/routes/login/Login.css
@@ -13,7 +13,6 @@
 
 @media (min-width: 768px) and (max-width: 991px) {
 }
-*****/
 
 @media (max-width: 767px) {
   .middle-border {
@@ -29,6 +28,18 @@
   h1,
   h2 {
     font-size: 32px;
+  }
+}
+*****/
+@media (orientation: portrait) {
+  .div_blank {
+    padding-top: 105px;
+  }
+}
+
+@media (orientation: landscape) {
+  .div_blank {
+    padding-top: 25px;
   }
 }
 
@@ -168,8 +179,8 @@ footer a:focus {
 /***** End Format Login Page *****/
 
 /***** Start Format Login Form *****/
-.div_blank {
-  padding-top: 15px;
+.div_blank_2 {
+  padding-top: 155px;
 }
 
 .form_box {
@@ -258,7 +269,7 @@ footer a:focus {
   display: inline-block;
   height: 50px;
   margin: 5px;
-  padding: 16px 20px 0;
+  padding: 16px 25px 0;
   background: #19b9e7;
   font-size: 16px;
   font-weight: 300;
