--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -23,10 +23,6 @@ html {
   line-height: 1.375; /* ~22px */
 }
 
-body {
-  padding-top: 70px;
-}
-
 a {
   color: #0074c2;
 }
@@ -104,6 +100,18 @@ textarea {
   background: #ccc;
   color: #000;
   padding: 0.2em 0;
+}
+
+@media (min-width: 992px) and (max-width: 4000px) {
+  body {
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 992px) {
+  body {
+    padding-top: 70px;
+  }
 }
 
 /*
