--- a/src/components/SearchBox/SearchBox.css
+++ b/src/components/SearchBox/SearchBox.css
@@ -8,13 +8,10 @@
  */
 
 .root {
-  margin: 3px 0px;
+  margin: 3px auto;
   padding: 4px 0 0 12px;
   display: inline-block;
-}
-
-.formWidth {
-  width: 390px;
+  width: 90%;
 }
 
 input.searchQuery {
