--- a/src/routes/home/Home.css
+++ b/src/routes/home/Home.css
@@ -20,30 +20,22 @@
   max-width: var(--max-content-width);
 }
 
-.newsItem {
-  margin: 0 0 2rem;
+.container > div {
+  margin: 10px;
 }
 
-.newsTitle {
-  font-size: 1.5rem;
+.feedsContent {
+  float: left;
+  width: 68%;
 }
 
-.newsDesc {
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-size: 1.125rem;
+/**************** Style Mobile ****************/
+@media (max-width: 992px) {
+  .container > div {
+    margin: 10px 0;
   }
 
-  pre {
-    white-space: pre-wrap;
-    font-size: 0.875rem;
-  }
-
-  img {
-    max-width: 100%;
+  .feedsContent {
+    width: 100%;
   }
 }
