--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,7 @@
 @import "./breakpoints";
 $theme-color: #fff;
+$theme-text-size: 14px;
+$theme-font: 'Roboto';
 $white-1: #fff;
 
 $green-1: #86C539;
