--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,6 +16,8 @@
 .root {
     background: #263E49;
     color: #fff;
+    border-radius: 0;
+    margin-bottom: 0;
   }
 
   .container {
@@ -55,6 +57,7 @@
 @media (max-width: 992px) {
   .navControl {
     background-color: #fff;
+    margin: -1px;
   }
 
   .navRightWrap {
