--- a/src/components/Layout/Layout.css
+++ b/src/components/Layout/Layout.css
@@ -106,16 +106,15 @@ textarea {
   padding: 0.2em 0;
 }
 
-@media (min-width: 992px) and (max-width: 4000px) {
-  body {
-    padding-top: 30px;
-  }
-}
-
-@media (max-width: 992px) {
-  body {
-    padding-top: 70px;
-  }
+/*
+ * Fix to top Header
+ */
+.fixToTop {
+  transform: translateZ(0px);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  z-index: 999;
 }
 
 /*
