Logic with mobile

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,5 +1,7 @@
 @import "./breakpoints";
 $theme-color: #fff;
+$nav-color: #283e4a;
+$text-white: #fff;
 $theme-text-size: 14px;
 $theme-font: 'Roboto';
 $white-1: #fff;
