--- a/src/routes/messages/Messages.scss
+++ b/src/routes/messages/Messages.scss
@@ -1,5 +1,7 @@
+@import "../../theme/resources.scss";
 .root {
   background: white;
+  width: 100%;
   flex: 1;
   .fullHeight {
     height: 100%;
@@ -11,5 +13,10 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+  }
+}
+:global .hiddenMobile {
+  @include media-breakpoint-down(sm) {
+    display: none;
   }
 }
