modify time line

--- a/src/routes/me/Me.scss
+++ b/src/routes/me/Me.scss
@@ -20,7 +20,11 @@
     color: white;
 }
 .textInline {
+     margin-left: 10px;
     display: inline-block;
+}
+.textInline :first-child {
+    margin-left: 0px;
 }
 .image {
     float: left;
