--- a/src/routes/me/Me.scss
+++ b/src/routes/me/Me.scss
@@ -16,7 +16,7 @@
     position: absolute;
     z-index: 1;
     left: 20px;
-    bottom: 70px;
+    top: 300px;
     color: white;
 }
 .textInline {
