--- a/src/routes/me/Tab.scss
+++ b/src/routes/me/Tab.scss
@@ -1,31 +1,50 @@
 @import '../../components/variables.css';
 
-
+.button {
+  border-width: 0px;
+  border-color: none;
+  background-color: transparent;
+ 
+}
+.button:active {
+  border-width: 0px;
+  border-color: none;
+}
+.button::selection{
+  border-width: 0px;
+  border-color: none;
+}
 .tab {    width: 100%;  
   display: inline-block;  
-    margin:0px;  
-      padding: 0px; 
-         border-bottom: 1px solid #f5f5f5; 
-          li {    float: left;    padding: 10px 15px ;  
-            border-left: 1px solid #f5f5f5;    font-size: 16px;  
-              position: relative;    list-style: none; 
-                 a {    
-                       color: #283e4a;   
-                        }    
-                    i {     
-                         display: none;   
-                              position: absolute;   
-                                   bottom: -1px;     
-                                      color: #889399;    
-                                          font-size: 16px;    
-                                             }   
-                                              }   
-                                              li.active {  
-                                                  i{    
-                                                        display: inline-block;   
-                                                         }  
-                                                          }    
-                                                           li:nth-child(1) {
-                                                              border: 0px; 
-                                                              }
-                                                              }
+   margin:0px;  
+   padding: 0px; 
+   border-bottom: 1px solid #f5f5f5; 
+   li {   
+      float: left;
+      padding: 10px 15px ;  
+     border-left: 1px solid #f5f5f5;
+      font-size: 16px;  
+      position: relative;
+       list-style: none; 
+            
+                   
+             i {     
+                 display: none;   
+                   
+                  bottom: -1px;     
+                 color:#ccc;    
+                 font-size: 16px;
+                 position: absolute;
+                 bottom:-9px;    
+                }   
+            
+   }                               
+     li.active {  
+        i{    
+         display: inline-block;   
+        }  
+               }    
+        li:nth-child(1) {
+            border: 0px; 
+               }
+               }
