--- a/src/routes/me/Tab.scss
+++ b/src/routes/me/Tab.scss
@@ -1,5 +1,5 @@
 @import '../../components/variables.css';
-
+button:focus{ border: 0px; outline: 0px;}
 .button {
   border-width: 0px;
   border-color: none;
