--- a/src/core/mailer/templates/account/confirm_email/html.ejs
+++ b/src/core/mailer/templates/account/confirm_email/html.ejs
@@ -3,11 +3,16 @@
   <div class="content">
     <div>Dear <%= email.data.username %>,</div>
 
-    <div>Thank you for signing up for <a href="http://sns.mttjsc.com">SNS social</a>!</div>
+    <div>Thank you for signing up for <a href="http://<%= email.data.host %>">SNS social</a>!</div>
+
+    <div>Your account informations</div>
+    <div><strong>Username</strong>: <%= email.data.username %></div>
+    <div><strong>Email</strong>: <%= email.data.email %></div>
+    <div><strong>Active Code</strong>: <%= email.data.activeCode %></div>
 
     <div>Please verify your Email address by clicking the button below.</div></br>
 
-    <div><a class="btn-active" href="http://sns.mttjsc.com/active/<%= email.data.username %>">Confirm your account</a></div></br>
+    <div><a class="btn-active" href="http://<%= email.data.host %>/active/<%= email.data.username %>">Confirm your account</a></div></br>
 
     <div>Thank you!</div>
   </div>
