--- a/src/core/mailer/templates/account/confirm_email/vi-vn/html.ejs
+++ b/src/core/mailer/templates/account/confirm_email/vi-vn/html.ejs
@@ -3,11 +3,16 @@
   <div class="content">
     <div><%= email.data.username %> thân mến,</div>
 
-    <div>Cảm ơn bạn đã đăng kí sử dụng dịch vụ của <a href="http://sns.mttjsc.com">Mạng xã hội Chung cư - SNS</a>!</div>
+    <div>Cảm ơn bạn đã đăng kí sử dụng dịch vụ của <a href="http://<%= email.data.host %>">Mạng xã hội Chung cư - SNS</a>!</div>
+
+    <div>Thông tin tài khoản của bạn</div>
+    <div><strong>Tên đăng nhập</strong>: <%= email.data.username %></div>
+    <div><strong>Địa chỉ mail</strong>: <%= email.data.email %></div>
+    <div><strong>Mã kích hoạt</strong>: <%= email.data.activeCode %></div>
 
     <div>Để hoàn tất đăng kí, xin vui lòng click chọn nút bên dưới xác nhận địa chỉ mail bạn đã đăng kí.</div></br>
 
-    <div><a class="btn-active" href="http://sns.mttjsc.com/active/<%= email.data.username %>">Xác nhận tài khoản</a></div></br>
+    <div><a class="btn-active" href="http://<%= email.data.host %>/active/<%= email.data.username %>">Xác nhận tài khoản</a></div></br>
 
     <div>Trân trọng!</div>
   </div>
