--- a/src/core/mailer/templates/account/acceptedForUserBelongsToBuilding/html.ejs
+++ b/src/core/mailer/templates/account/acceptedForUserBelongsToBuilding/html.ejs
@@ -1,11 +1,11 @@
 <div class="wrapper">
-  <div class="header">SNS Account Approved</div>
+  <div class="header">SNS Account Accepted</div>
   <div class="content">
     <div>Dear <%= email.data.username %>,</div>
 
     <div>Thank you for signing up for <a href="http://<%= email.data.host %>">SNS social</a>!</div>
 
-    <div>Your account active and approved belongs to building named <%= email.data.building.name %>.</div></br>
+    <div>Your account activated and accepted belongs to building named <%= email.data.building.name %>.</div></br>
 
     <div><a class="btn-redirect" href="http://<%= email.data.host %>/login">Visit SNS Website</a></div></br>
 
