Change mail template show reason

--- a/src/core/mailer/templates/account/rejectedForUserBelongsToBuilding/html.ejs
+++ b/src/core/mailer/templates/account/rejectedForUserBelongsToBuilding/html.ejs
@@ -5,6 +5,9 @@
 
     <div>Thank you for signing up for <a href="http://sns.mttjsc.com">SNS social</a>!</div>
 
+    <div>Reject information:</div>
+    <div class="message"><%- email.data.message %></div></br>
+
     <div>Please verify information and contact Building Management because your account has been rejected.</div></br>
 
     <div>Thank you!</div>
