--- a/src/core/mailer/templates/account/rejectedForUserBelongsToBuilding/vi-vn/html.ejs
+++ b/src/core/mailer/templates/account/rejectedForUserBelongsToBuilding/vi-vn/html.ejs
@@ -1,13 +1,16 @@
 <div class="wrapper">
   <div class="header">Từ chối đăng ký làm thành viên của tòa nhà</div>
   <div class="content">
-    <div><%= email.data.username %> thân mến!</div>
+    <div><strong><%= email.data.username %></strong> thân mến!</div>
 
     <div>Cảm ơn bạn đã đăng kí và sử dụng <a href="http://<%= email.data.host %>">
       <strong>Mạng xã hội chung cư - SNS</strong></a>!
     </div>
 
     <div>Bạn đã bị từ chối là thành viên của tòa nhà <%= email.data.building.name %>.</div></br>
+
+    <div>Thông tin từ chối:</div>
+    <div class="message"><%- email.data.message %></div></br>
 
     <div>Vui lòng liên hệ với BQT của tòa nhà để kiểm tra lại thông tin.</div></br>
 
