--- a/src/core/mailer/templates/account/forgot_password/html.ejs
+++ b/src/core/mailer/templates/account/forgot_password/html.ejs
@@ -3,11 +3,18 @@
   <div class="content">
     <div>Dear <%= email.data.username %>,</div>
 
-    <div>Thank you for signing up for <a href="http://sns.mttjsc.com">SNS social</a>!</div>
+    <div>Thank you for signing up for <a href="http://<%= email.data.host %>">SNS social</a>!</div>
 
     <div>Please click the button below.</div></br>
 
-    <div><a class="btn-active" href="http://sns.mttjsc.com/change_pass/<%= email.data.username %>">Change your password</a></div></br>
+    <div>
+      <a class="btn-active"
+        href="http://<%= email.data.host %>/forgot-password?username=<%= email.data.username %>&code=<%= email.data.activeCode %>"
+      >
+      Change your password
+      </a>
+    </div>
+    </br>
 
     <div>Thank you!</div>
   </div>
