--- a/src/core/mailer/templates/account/forgot_password/vi-vn/html.ejs
+++ b/src/core/mailer/templates/account/forgot_password/vi-vn/html.ejs
@@ -3,11 +3,18 @@
   <div class="content">
     <div><%= email.data.username %> thân mến,</div>
 
-    <div>Cảm ơn bạn đã đăng kí sử dụng dịch vụ của <a href="http://sns.mttjsc.com">Mạng xã hội Chung cư - SNS</a>!</div>
+    <div>Cảm ơn bạn đã đăng kí sử dụng dịch vụ của <a href="http://<%= email.data.host %>">Mạng xã hội Chung cư - SNS</a>!</div>
 
-    <div>Để lấy lại mật khẩu cho tài khoản của bạn. Xin vui long click chọn "Đổi mật khẩu" và thực hiện theo hướng dẫn.</div></br>
+    <div>Để lấy lại mật khẩu cho tài khoản của bạn. Xin vui lòng click chọn "Đổi mật khẩu" và thực hiện theo hướng dẫn.</div></br>
 
-    <div><a class="btn-active" href="http://sns.mttjsc.com/active/<%= email.data.username %>">Đổi mật khẩu</a></div></br>
+    <div>
+      <a class="btn-active"
+        href="http://<%= email.data.host %>/forgot-password?username=<%= email.data.username %>&code=<%= email.data.activeCode %>"
+      >
+        Đổi mật khẩu
+      </a>
+    </div>
+    </br>
 
     <div>Trân trọng!</div>
   </div>
