--- a/src/core/mailer/templates/account/change_password/html.ejs
+++ b/src/core/mailer/templates/account/change_password/html.ejs
@@ -3,11 +3,11 @@
   <div class="content">
     <div>Dear <%= email.data.username %>,</div>
 
-    <div>Thank you for signing up for <a href="http://sns.mttjsc.com">SNS social</a>!</div>
+    <div>Thank you for signing up for <a href="http://<%= email.data.host %>">SNS social</a>!</div>
 
-    <div>Please verify your Email address by clicking the button below.</div></br>
+    <div>Your password has been changed!</div></br>
 
-    <div><a class="btn-active" href="http://sns.mttjsc.com/active/<%= email.data.username %>">Confirm your account</a></div></br>
+    <div><a class="btn-active" href="http://<%= email.data.host %>/login">Go SNS</a></div></br>
 
     <div>Thank you!</div>
   </div>
