[#694] [Forget Password] Update some texts

--- a/src/core/mailer/templates/account/change_password/vi-vn/html.ejs
+++ b/src/core/mailer/templates/account/change_password/vi-vn/html.ejs
@@ -1,5 +1,5 @@
 <div class="wrapper">
-  <div class="header">Xác nhận đăng kí tài khoản</div>
+  <div class="header">Đổi mật khẩu thành công</div>
   <div class="content">
     <div><%= email.data.username %> thân mến,</div>
 
